--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"E:\\JAVA\\JDK","type":"JRE","hints":{}},"jre:jre:1.8.0"],[{"location":"E:\\RealProject\\realProject2","type":"PROJECT","hints":{"PROJECT_NAME":"realProject2"}},"icia.project:web:1.0.0"]]
+[[{"location":"E:\\RealProject\\realProject2","type":"PROJECT","hints":{"PROJECT_NAME":"realProject2"}},"icia.project:web:1.0.0"],[{"location":"E:\\JAVA\\JDK","type":"JRE","hints":{}},"jre:jre:1.8.0"]]
