--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@ realProject2/target/m2e-wtp/web-resources/META-INF/maven/icia.project/web/pom.pr
 realProject2/target/m2e-wtp/web-resources/META-INF/MANIFEST.MF
 *.xlsx
 *.txt
+.recommenders/index/http___download_eclipse_org_recommenders_models_oxygen_/_d.frq
+.recommenders/index/http___download_eclipse_org_recommenders_models_oxygen_/_d.fnm
+.recommenders/index/http___download_eclipse_org_recommenders_models_oxygen_/_d.fdx
+.recommenders/index/http___download_eclipse_org_recommenders_models_oxygen_/_d.fdt
+.recommenders/index/http___download_eclipse_org_recommenders_models_oxygen_/segments_e
+.recommenders/index/http___download_eclipse_org_recommenders_models_oxygen_/_d.tis
+.recommenders/index/http___download_eclipse_org_recommenders_models_oxygen_/_d.tii
+.recommenders/index/http___download_eclipse_org_recommenders_models_oxygen_/_d.prx
+.recommenders/index/http___download_eclipse_org_recommenders_models_oxygen_/_d.nrm
