--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"E:\\TOMCAT\\lib\\catalina.jar","type":"JAR","hints":{}},"ABSENT"],[{"location":"E:\\JAVA","type":"JRE","hints":{}},"ABSENT"]]
